--- a/src/app/sharedcompoents/home/home.component.html
+++ b/src/app/sharedcompoents/home/home.component.html
@@ -3,10 +3,10 @@
         <div class="">
             <ul class=" nav2 d-flex gap-5">
                 <li (click)="getCategory('entertainment')">Entertainment</li>
-                <li (click)="getCategory('general')">Entertainment</li>
-                <li (click)="getCategory('health ')">Entertainment</li>
-                <li (click)="getCategory('science')">Entertainment</li>
-                <li (click)="getCategory('sports')">Entertainment</li>
+                <li (click)="getCategory('general')">General</li>
+                <li (click)="getCategory('health ')">health</li>
+                <li (click)="getCategory('science')">science</li>
+                <li (click)="getCategory('sports')">sports</li>
                 <li (click)="getCategory('technology')">Technology</li>
             </ul>
         </div>
@@ -29,6 +29,7 @@
               } @empty {
                 <li> There are no items. </li>
               }
+            
         </div>
     </div>
 </section>
