--- a/src/app/sharedcompoents/navbar/navbar.component.html
+++ b/src/app/sharedcompoents/navbar/navbar.component.html
@@ -1,5 +1,10 @@
 <section class="navbar">
     <div class="container">
         <h1>NEWS</h1>
+        <div>
+            <div class="d-flex">
+                <a routerLink="/eg">Egypt</a>
+            </div>
+        </div>
     </div>
 </section>
