--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-navbar></app-navbar>
+@defer {
 <router-outlet></router-outlet>
+
+
+} @placeholder {
+<p>Placeholder...</p>
+} @loading {
+<p>Loading...</p>
+} @error {
+    raniaaaaaaaaaaaaaaaaaaaaaaa
+}
